<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkpurple"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="Details"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrolldetail"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:id="@+id/detailImage"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailTitle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Movie Title"
                android:textSize="27sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="IMDB Rating:"
                    android:textSize="20sp"
                    android:textColor="@color/yellow"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:text="8.5"
                    android:textSize="23sp"
                    android:textColor="#7CFC00"
                    android:id="@+id/detailRating"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:text="Year:"
                    android:textSize="20sp"
                    android:textColor="@color/yellow"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="2023"
                    android:textSize="23sp"
                    android:textColor="#18BCAA"
                    android:id="@+id/detailYear"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium" />

            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Genres:"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/genre1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Genre 1"
                    android:textSize="16sp"
                    android:textColor="#C70039"
                    android:fontFamily="sans-serif" />

                <TextView
                    android:id="@+id/genre2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Genre 2"
                    android:textSize="16sp"
                    android:textColor="#FF5733"
                    android:fontFamily="sans-serif" />

                <TextView
                    android:id="@+id/genre3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Genre 3"
                    android:textSize="16sp"
                    android:textColor="#FFC300"
                    android:fontFamily="sans-serif" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Synopsis:"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="6dp"
                android:text="Movie plot goes here."
                android:textSize="18sp"
                android:textColor="#DAF7A6"
                android:id="@+id/detailPlot"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
